# raye-sailbot-msg

./: CMakeLists.txt  README.md  package.xml
msg/: GPS.msg  LowWindStatus  Sensors.msg  actuation_angle.msg  globalWind.msg  manual_override.msg  min_voltage.msg  windSensor.msg
